使用 Colaboratory 创建

--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -28,19 +28,6 @@
     },
     {
       "metadata": {
-        "id": "Kx2-Naf4IVy_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "WVGVxS45EPaQ",
         "colab_type": "code",
         "colab": {
@@ -113,9 +100,89 @@
     },
     {
       "metadata": {
+        "id": "C4vjhWx9R0CV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "bd1bd1de-2f24-4a6a-e4d2-b852228268ee"
+      },
+      "cell_type": "code",
+      "source": [
+        "# http://pytorch.org/\n",
+        "from os.path import exists\n",
+        "from wheel.pep425tags import get_abbr_impl, get_impl_ver, get_abi_tag\n",
+        "platform = '{}{}-{}'.format(get_abbr_impl(), get_impl_ver(), get_abi_tag())\n",
+        "cuda_output = !ldconfig -p|grep cudart.so|sed -e 's/.*\\.\\([0-9]*\\)\\.\\([0-9]*\\)$/cu\\1\\2/'\n",
+        "accelerator = cuda_output[0] if exists('/dev/nvidia0') else 'cpu'\n",
+        "\n",
+        "!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.4.1-{platform}-linux_x86_64.whl torchvision\\"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tcmalloc: large alloc 1073750016 bytes == 0x59250000 @  0x7f32cee242a4 0x591a07 0x5b5d56 0x502e9a 0x506859 0x502209 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x507641 0x502209 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x507641 0x504c28 0x502540 0x502f3d 0x507641\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "L7YSwo23SISE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 397
+        },
+        "outputId": "e99eace4-2a6b-46fc-ff69-75373235b438"
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install pytorch_pretrained_bert"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting pytorch_pretrained_bert\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/95/68/84de54aea460eb5b2e90bf47a429aacc1ce97ff052ec40874ea38ae2331d/pytorch_pretrained_bert-0.4.0-py3-none-any.whl (45kB)\n",
+            "\r\u001b[K    22% |███████▎                        | 10kB 18.1MB/s eta 0:00:01\r\u001b[K    45% |██████████████▌                 | 20kB 1.5MB/s eta 0:00:01\r\u001b[K    68% |█████████████████████▊          | 30kB 2.3MB/s eta 0:00:01\r\u001b[K    90% |█████████████████████████████   | 40kB 1.5MB/s eta 0:00:01\r\u001b[K    100% |████████████████████████████████| 51kB 1.8MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from pytorch_pretrained_bert) (1.14.6)\n",
+            "Requirement already satisfied: boto3 in /usr/local/lib/python3.6/dist-packages (from pytorch_pretrained_bert) (1.9.66)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from pytorch_pretrained_bert) (2.18.4)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from pytorch_pretrained_bert) (4.28.1)\n",
+            "Requirement already satisfied: torch>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from pytorch_pretrained_bert) (0.4.1)\n",
+            "Requirement already satisfied: s3transfer<0.2.0,>=0.1.10 in /usr/local/lib/python3.6/dist-packages (from boto3->pytorch_pretrained_bert) (0.1.13)\n",
+            "Requirement already satisfied: botocore<1.13.0,>=1.12.66 in /usr/local/lib/python3.6/dist-packages (from boto3->pytorch_pretrained_bert) (1.12.66)\n",
+            "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /usr/local/lib/python3.6/dist-packages (from boto3->pytorch_pretrained_bert) (0.9.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->pytorch_pretrained_bert) (2018.11.29)\n",
+            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->pytorch_pretrained_bert) (2.6)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->pytorch_pretrained_bert) (3.0.4)\n",
+            "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->pytorch_pretrained_bert) (1.22)\n",
+            "Requirement already satisfied: docutils>=0.10 in /usr/local/lib/python3.6/dist-packages (from botocore<1.13.0,>=1.12.66->boto3->pytorch_pretrained_bert) (0.14)\n",
+            "Requirement already satisfied: python-dateutil<3.0.0,>=2.1; python_version >= \"2.7\" in /usr/local/lib/python3.6/dist-packages (from botocore<1.13.0,>=1.12.66->boto3->pytorch_pretrained_bert) (2.5.3)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil<3.0.0,>=2.1; python_version >= \"2.7\"->botocore<1.13.0,>=1.12.66->boto3->pytorch_pretrained_bert) (1.11.0)\n",
+            "Installing collected packages: pytorch-pretrained-bert\n",
+            "Successfully installed pytorch-pretrained-bert-0.4.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "1up16TvMNwHU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "97a10ed4-d653-438a-dc19-1255a51de013"
       },
       "cell_type": "code",
       "source": [
@@ -133,8 +200,16 @@
         "from torch.autograd import Variable\n",
         "from pytorch_pretrained_bert import BertTokenizer, BertModel, BertForMaskedLM, BertAdam"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -298,6 +373,33 @@
         "    cnt += tot\n",
         "  all_loss /= cnt\n",
         "  logger.info('Iter %d, train_loss=%.4f' % (i, all_loss))\n",
+        "  return model, optimizer\n",
+        "\n",
+        "def evaluate(model, valid_loader, optimizer, logger, print_every=100):\n",
+        "  model = model.train()\n",
+        "  loss_fn = nn.CrossEntropyLoss()\n",
+        "  all_loss = 0.0\n",
+        "  hit, tot, cnt = 0, 0, 0\n",
+        "  for i, (x, mask, target) in enumerate(train_loader):\n",
+        "    x = x.cuda().long()\n",
+        "    mask = mask.cuda().long()\n",
+        "    target = target.cuda().long()\n",
+        "    target = torch.clamp(target, min=0, max=1)\n",
+        "    scores = model(x, mask)\n",
+        "    pred = torch.argmax(scores, dim=1)\n",
+        "    tot = int(x.shape[0])\n",
+        "    hit = torch.sum(target == pred)\n",
+        "    accuracy = float(hit) / tot\n",
+        "    loss = loss_fn(scores, target)\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "    if i % print_every == 0:\n",
+        "      logger.info('Iter %d, loss=%.4f, acc=%.4f' % (i, loss, accuracy))\n",
+        "    all_loss += float(loss) * int(tot)\n",
+        "    cnt += tot\n",
+        "  all_loss /= cnt\n",
+        "  logger.info('Iter %d, train_loss=%.4f' % (i, all_loss))\n",
         "  return model, optimizer"
       ],
       "execution_count": 0,
@@ -307,15 +409,28 @@
       "metadata": {
         "id": "_Zk-ku4vOr5T",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "31da7b53-351e-42e3-d632-f3aeb3c0216e"
       },
       "cell_type": "code",
       "source": [
         "!mkdir log\n",
-        "!mkdir bst_model"
+        "!mkdir bst_model\n",
+        "!ls"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "bst_model  log\tsample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -343,7 +458,11 @@
       "metadata": {
         "id": "4tvUPCngPTQL",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        },
+        "outputId": "2c876c26-1cd4-4ca9-fa78-21141f1f2d68"
       },
       "cell_type": "code",
       "source": [
@@ -376,8 +495,20 @@
         "optimizer_grouped_parameters = [{'params': base_params, 'weight_decay': 0.01}, {'params': myModel.bert.parameters(), 'weight_decay': 0.0, 'lr': 1e-6}]\n",
         "optimizer = BertAdam(optimizer_grouped_parameters, lr=args.lr, warmup=args.warmup_proportion, t_total=train_set.__len__())"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-b556cf453fc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtag\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'cn'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0mtrain_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbertDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cn_train_data.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mtrain_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_workers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mvalid_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbertDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cn_valid_data.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mvalid_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalid_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbz\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_workers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'args' is not defined"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
