--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -30,6 +30,7 @@
       "metadata": {
         "id": "WVGVxS45EPaQ",
         "colab_type": "code",
+        "outputId": "d5db4437-2b3e-4586-8c8c-95cf93405255",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -47,8 +48,7 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "d5db4437-2b3e-4586-8c8c-95cf93405255"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -60,7 +60,7 @@
         "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
         "      name=fn, length=len(uploaded[fn])))"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -102,11 +102,11 @@
       "metadata": {
         "id": "C4vjhWx9R0CV",
         "colab_type": "code",
+        "outputId": "bd1bd1de-2f24-4a6a-e4d2-b852228268ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
-        },
-        "outputId": "bd1bd1de-2f24-4a6a-e4d2-b852228268ee"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -119,7 +119,7 @@
         "\n",
         "!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.4.1-{platform}-linux_x86_64.whl torchvision\\"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,17 +134,17 @@
       "metadata": {
         "id": "L7YSwo23SISE",
         "colab_type": "code",
+        "outputId": "e99eace4-2a6b-46fc-ff69-75373235b438",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        },
-        "outputId": "e99eace4-2a6b-46fc-ff69-75373235b438"
+        }
       },
       "cell_type": "code",
       "source": [
         "!pip install pytorch_pretrained_bert"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,11 +178,11 @@
       "metadata": {
         "id": "1up16TvMNwHU",
         "colab_type": "code",
+        "outputId": "97a10ed4-d653-438a-dc19-1255a51de013",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "97a10ed4-d653-438a-dc19-1255a51de013"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -200,7 +200,7 @@
         "from torch.autograd import Variable\n",
         "from pytorch_pretrained_bert import BertTokenizer, BertModel, BertForMaskedLM, BertAdam"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,59 +348,65 @@
       },
       "cell_type": "code",
       "source": [
-        "def train(model, train_loader, optimizer, logger, print_every=100):\n",
+        "def train(model, train_loader, optimizer, logger, epoch=0, print_every=100):\n",
         "  model = model.train()\n",
         "  loss_fn = nn.CrossEntropyLoss()\n",
-        "  all_loss = 0.0\n",
+        "  all_loss, all_accuracy = 0.0, 0.0\n",
         "  hit, tot, cnt = 0, 0, 0\n",
         "  for i, (x, mask, target) in enumerate(train_loader):\n",
         "    x = x.cuda().long()\n",
         "    mask = mask.cuda().long()\n",
         "    target = target.cuda().long()\n",
         "    target = torch.clamp(target, min=0, max=1)\n",
+        "    \n",
         "    scores = model(x, mask)\n",
-        "    pred = torch.argmax(scores, dim=1)\n",
-        "    tot = int(x.shape[0])\n",
-        "    hit = torch.sum(target == pred)\n",
-        "    accuracy = float(hit) / tot\n",
         "    loss = loss_fn(scores, target)\n",
         "    optimizer.zero_grad()\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
+        "    \n",
+        "    pred = torch.argmax(scores, dim=1)\n",
+        "    hit = torch.sum(target == pred)\n",
+        "    \n",
+        "    accuracy = float(hit) / int(x.shape[0])\n",
         "    if i % print_every == 0:\n",
-        "      logger.info('Iter %d, loss=%.4f, acc=%.4f' % (i, loss, accuracy))\n",
+        "      logger.info('Epoch %d, Iter %d, loss=%.4f, acc=%.4f' % (epoch, i, loss, accuracy))\n",
         "    all_loss += float(loss) * int(tot)\n",
-        "    cnt += tot\n",
+        "    all_accuracy += float(hit)\n",
+        "    cnt += int(x.shape[0])\n",
+        "    \n",
         "  all_loss /= cnt\n",
-        "  logger.info('Iter %d, train_loss=%.4f' % (i, all_loss))\n",
+        "  all_accuracy /= cnt\n",
+        "  logger.info('Epoch %d, train_loss=%.4f, train_accuracy%.4f' % (epoch, all_loss, all_accuracy))\n",
         "  return model, optimizer\n",
         "\n",
-        "def evaluate(model, valid_loader, optimizer, logger, print_every=100):\n",
-        "  model = model.train()\n",
+        "def evaluate(model, valid_loader, logger, epoch=0, print_every=100):\n",
+        "  model = model.eval()\n",
         "  loss_fn = nn.CrossEntropyLoss()\n",
         "  all_loss = 0.0\n",
-        "  hit, tot, cnt = 0, 0, 0\n",
-        "  for i, (x, mask, target) in enumerate(train_loader):\n",
+        "  hit, tot = 0, 0\n",
+        "  for i, (x, mask, target) in enumerate(valid_loader):\n",
         "    x = x.cuda().long()\n",
         "    mask = mask.cuda().long()\n",
         "    target = target.cuda().long()\n",
         "    target = torch.clamp(target, min=0, max=1)\n",
+        "    \n",
         "    scores = model(x, mask)\n",
-        "    pred = torch.argmax(scores, dim=1)\n",
-        "    tot = int(x.shape[0])\n",
-        "    hit = torch.sum(target == pred)\n",
-        "    accuracy = float(hit) / tot\n",
         "    loss = loss_fn(scores, target)\n",
         "    optimizer.zero_grad()\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
-        "    if i % print_every == 0:\n",
-        "      logger.info('Iter %d, loss=%.4f, acc=%.4f' % (i, loss, accuracy))\n",
-        "    all_loss += float(loss) * int(tot)\n",
-        "    cnt += tot\n",
-        "  all_loss /= cnt\n",
-        "  logger.info('Iter %d, train_loss=%.4f' % (i, all_loss))\n",
-        "  return model, optimizer"
+        "    \n",
+        "    pred = torch.argmax(scores, dim=1)\n",
+        "    \n",
+        "    hit += float(torch.sum(target == pred))\n",
+        "    all_loss += float(loss) * int(x.shape[0])\n",
+        "    tot += int(x.shape[0])\n",
+        "  \n",
+        "  all_loss /= tot\n",
+        "  accuracy = float(hit) / tot\n",
+        "  logger.info('Epoch %d, valid_loss=%.4f, valid_accuracy=%.4f' % (epoch, all_loss, accuracy))\n",
+        "  return model, accuracy"
       ],
       "execution_count": 0,
       "outputs": []
@@ -409,11 +415,11 @@
       "metadata": {
         "id": "_Zk-ku4vOr5T",
         "colab_type": "code",
+        "outputId": "31da7b53-351e-42e3-d632-f3aeb3c0216e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "31da7b53-351e-42e3-d632-f3aeb3c0216e"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -421,7 +427,7 @@
         "!mkdir bst_model\n",
         "!ls"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,22 +464,22 @@
       "metadata": {
         "id": "4tvUPCngPTQL",
         "colab_type": "code",
+        "outputId": "2c876c26-1cd4-4ca9-fa78-21141f1f2d68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 245
-        },
-        "outputId": "2c876c26-1cd4-4ca9-fa78-21141f1f2d68"
+        }
       },
       "cell_type": "code",
       "source": [
-        "if args.tag == 'cn':\n",
+        "if tag == 'cn':\n",
         "  train_set = bertDataset('cn_train_data.h5')\n",
         "  train_loader = torch.utils.data.DataLoader(dataset=train_set, batch_size=bz, shuffle=True, num_workers=8)\n",
         "  valid_set = bertDataset('cn_valid_data.h5')\n",
         "  valid_loader = torch.utils.data.DataLoader(dataset=valid_set, batch_size=int(bz / 2), shuffle=True, num_workers=8)\n",
         "  myModel = myBert(embedding_length, 'bert-base-chinese', use_cuda=args.gpu)\n",
         "  myModel = myModel.to(device=device)\n",
-        "elif args.tag == 'en':\n",
+        "elif tag == 'en':\n",
         "  train_set = bertDataset('en_train_data.h5')\n",
         "  train_loader = torch.utils.data.DataLoader(dataset=train_set, batch_size=bz, shuffle=True, num_workers=8)\n",
         "  valid_set = bertDataset('en_train_data.h5')\n",
@@ -481,7 +487,7 @@
         "  myModel = myBert(embedding_length, 'bert-base-uncased', use_cuda=args.gpu)\n",
         "  myModel = myModel.to(device=device)\n",
         "  \n",
-        "if args.checkpoint != '':\n",
+        "if checkpoint != '':\n",
         "  state = torch.load(args.checkpoint)\n",
         "  myModel.load_state_dict(state['model_state'])\n",
         "  optimizer.load_state_dict(state['optim_state'])\n",
@@ -495,7 +501,7 @@
         "optimizer_grouped_parameters = [{'params': base_params, 'weight_decay': 0.01}, {'params': myModel.bert.parameters(), 'weight_decay': 0.0, 'lr': 1e-6}]\n",
         "optimizer = BertAdam(optimizer_grouped_parameters, lr=args.lr, warmup=args.warmup_proportion, t_total=train_set.__len__())"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -540,29 +546,14 @@
       "source": [
         "for i in range(epoch, end_epoch):\n",
         "  logger.info('=> Epoch %d, lr = %0.6f <=' % (i, args.lr))\n",
-        "  myModel, optimizer = train(myModel, train_loader, optimizer, logger, print_every=50)\n",
-        "  myModel = myModel.eval()\n",
-        "  loss_fn = nn.CrossEntropyLoss()\n",
-        "  hit, tot = 0, 0\n",
-        "  all_loss = 0.0\n",
-        "  for iv, (xv, maskv, targetv) in enumerate(valid_loader):\n",
-        "    xv = xv.cuda().long()\n",
-        "    maskv = maskv.cuda().long()\n",
-        "    targetv = targetv.cuda().long()\n",
-        "    targetv = torch.clamp(targetv, min=0, max=1)\n",
-        "    scores = myModel(xv, maskv)\n",
-        "    loss = loss_fn(scores, targetv)\n",
-        "    pred = torch.argmax(scores, dim=1)\n",
-        "    tot += int(xv.shape[0])\n",
-        "    hit += int(torch.sum(targetv == pred))\n",
-        "    all_loss += float(loss) * int(xv.shape[0])\n",
-        "  accuracy = float(hit) / tot\n",
-        "  all_loss /= tot\n",
+        "  myModel, optimizer = train(myModel, train_loader, optimizer, logger, epoch=i, print_every=50)\n",
+        "  myModel, accuracy = evaluate(myModel, valid_loader, logger, epoch=i)\n",
+        "  \n",
         "  if (accuracy > bst_acc):\n",
         "    bst_acc = accuracy\n",
         "    state = {'model_state': myModel.state_dict(), 'epoch': i, 'optim_state': optimizer.state_dict(), 'acc': bst_acc}\n",
         "    torch.save(state, save_path)\n",
-        "  logger.info('After epoch %d, acc=%.4f, loss=%.4f' % (i, accuracy, all_loss))\n",
+        "  \n",
         "logger.info(\"Finish\")"
       ],
       "execution_count": 0,
