使用 Colaboratory 创建

--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -64,13 +64,15 @@
       },
       "cell_type": "code",
       "source": [
-        "!ls /content/gdrive/My\\ Drive\n",
-        "!nvidia-smi\n",
         "!apt-get install psmisc\n",
         "!rm -rf log\n",
         "!rm -rf bst_model\n",
         "!mkdir log\n",
         "!mkdir bst_model\n",
+        "!cp /content/gdrive/My\\ Drive/cn_train_data.h5 cn_train_data.h5\n",
+        "!cp /content/gdrive/My\\ Drive/en_train_data.h5 en_train_data.h5\n",
+        "!cp /content/gdrive/My\\ Drive/cn_valid_data.h5 cn_valid_data.h5\n",
+        "!cp /content/gdrive/My\\ Drive/en_valid_data.h5 en_valid_data.h5\n",
         "!ls"
       ],
       "execution_count": 2,
@@ -233,6 +235,7 @@
         "import torch.utils.data\n",
         "import h5py\n",
         "import numpy as np\n",
+        "import time\n",
         "from torch.autograd import Variable\n",
         "from pytorch_pretrained_bert import BertTokenizer, BertModel, BertForMaskedLM, BertAdam"
       ],
@@ -420,15 +423,15 @@
         "    accuracy = float(hit) / int(x.shape[0])\n",
         "    if i % print_every == 0:\n",
         "      logger.info('Epoch %d, Iter %d, loss=%.4f, acc=%.4f' % (epoch, i, loss, accuracy))\n",
-        "      print('Epoch %d, Iter %d, loss=%.4f, acc=%.4f' % (epoch, i, loss, accuracy))\n",
+        "      print(time.strftime(\"%Y-%m-%d %H:%M:%S \", time.localtime()) + 'Epoch %d, Iter %d, loss=%.4f, acc=%.4f' % (epoch, i, loss, accuracy))\n",
         "    all_loss += float(loss) * int(tot)\n",
         "    all_accuracy += float(hit)\n",
         "    cnt += int(x.shape[0])\n",
         "    \n",
-        "  all_loss /= cnt\n",
+        "  all_loss /= float(cnt)\n",
         "  all_accuracy /= cnt\n",
-        "  logger.info('Epoch %d, train_loss=%.4f, train_accuracy%.4f' % (epoch, all_loss, all_accuracy))\n",
-        "  print('Epoch %d, train_loss=%.4f, train_accuracy%.4f' % (epoch, all_loss, all_accuracy))\n",
+        "  logger.info('Epoch %d, train_loss=%.4f, train_accuracy=%.4f' % (epoch, all_loss, all_accuracy))\n",
+        "  print(time.strftime(\"%Y-%m-%d %H:%M:%S \", time.localtime()) + 'Epoch %d, train_loss=%.4f, train_accuracy=%.4f' % (epoch, all_loss, all_accuracy))\n",
         "  return model, optimizer\n",
         "\n",
         "def evaluate(model, valid_loader, logger, epoch=0, print_every=100):\n",
@@ -457,7 +460,7 @@
         "  all_loss /= tot\n",
         "  accuracy = float(hit) / tot\n",
         "  logger.info('Epoch %d, valid_loss=%.4f, valid_accuracy=%.4f' % (epoch, all_loss, accuracy))\n",
-        "  print('Epoch %d, valid_loss=%.4f, valid_accuracy=%.4f' % (epoch, all_loss, accuracy))\n",
+        "  print(time.strftime(\"%Y-%m-%d %H:%M:%S \", time.localtime()) + 'Epoch %d, valid_loss=%.4f, valid_accuracy=%.4f' % (epoch, all_loss, accuracy))\n",
         "  return model, accuracy"
       ],
       "execution_count": 0,
@@ -533,15 +536,15 @@
       "cell_type": "code",
       "source": [
         "if tag == 'cn':\n",
-        "  train_set = bertDataset('/content/gdrive/My Drive/cn_train_data.h5')\n",
+        "  train_set = bertDataset('cn_train_data.h5')\n",
         "  train_loader = torch.utils.data.DataLoader(dataset=train_set, batch_size=bz, shuffle=True, num_workers=8)\n",
-        "  valid_set = bertDataset('/content/gdrive/My Drive/cn_valid_data.h5')\n",
+        "  valid_set = bertDataset('cn_valid_data.h5')\n",
         "  valid_loader = torch.utils.data.DataLoader(dataset=valid_set, batch_size=int(bz / 2), shuffle=True, num_workers=8)\n",
         "  myModel = myBert(embedding_length, 'bert-base-chinese', use_cuda=True)\n",
         "elif tag == 'en':\n",
-        "  train_set = bertDataset('/content/gdrive/My Drive/en_train_data.h5')\n",
+        "  train_set = bertDataset('en_train_data.h5')\n",
         "  train_loader = torch.utils.data.DataLoader(dataset=train_set, batch_size=bz, shuffle=True, num_workers=8)\n",
-        "  valid_set = bertDataset('/content/gdrive/My Drive/en_train_data.h5')\n",
+        "  valid_set = bertDataset('en_valid_data.h5')\n",
         "  valid_loader = torch.utils.data.DataLoader(dataset=valid_set, batch_size=int(bz / 2), shuffle=True, num_workers=8)\n",
         "  myModel = myBert(embedding_length, 'bert-base-uncased', use_cuda=True)\n",
         "  \n",
@@ -593,7 +596,7 @@
         "outputId": "c38593cd-6b82-4c85-e34c-315b78c0c01a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 2189
         }
       },
       "cell_type": "code",
@@ -610,14 +613,120 @@
         "  \n",
         "logger.info(\"Finish\")"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 0, Iter 0, loss=0.9149, acc=0.5625\n"
+            "Epoch 0, Iter 0, loss=0.9149, acc=0.5625\n",
+            "Epoch 0, Iter 50, loss=0.7760, acc=0.5625\n",
+            "Epoch 0, Iter 100, loss=0.7625, acc=0.4375\n",
+            "Epoch 0, Iter 150, loss=0.6318, acc=0.6250\n",
+            "Epoch 0, Iter 200, loss=0.6888, acc=0.5938\n",
+            "Epoch 0, Iter 250, loss=0.6417, acc=0.5938\n",
+            "Epoch 0, train_loss=0.0000, train_accuracy0.5453\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Traceback (most recent call last):\n",
+            "Traceback (most recent call last):\n",
+            "Traceback (most recent call last):\n",
+            "Traceback (most recent call last):\n",
+            "Traceback (most recent call last):\n",
+            "Traceback (most recent call last):\n",
+            "Traceback (most recent call last):\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 240, in _feed\n",
+            "    send_bytes(obj)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 240, in _feed\n",
+            "    send_bytes(obj)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 240, in _feed\n",
+            "    send_bytes(obj)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 240, in _feed\n",
+            "    send_bytes(obj)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 240, in _feed\n",
+            "    send_bytes(obj)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 240, in _feed\n",
+            "    send_bytes(obj)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 240, in _feed\n",
+            "    send_bytes(obj)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 240, in _feed\n",
+            "    send_bytes(obj)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 200, in send_bytes\n",
+            "    self._send_bytes(m[offset:offset + size])\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 200, in send_bytes\n",
+            "    self._send_bytes(m[offset:offset + size])\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 200, in send_bytes\n",
+            "    self._send_bytes(m[offset:offset + size])\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 200, in send_bytes\n",
+            "    self._send_bytes(m[offset:offset + size])\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 200, in send_bytes\n",
+            "    self._send_bytes(m[offset:offset + size])\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 200, in send_bytes\n",
+            "    self._send_bytes(m[offset:offset + size])\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 200, in send_bytes\n",
+            "    self._send_bytes(m[offset:offset + size])\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 200, in send_bytes\n",
+            "    self._send_bytes(m[offset:offset + size])\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 404, in _send_bytes\n",
+            "    self._send(header + buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 404, in _send_bytes\n",
+            "    self._send(header + buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 404, in _send_bytes\n",
+            "    self._send(header + buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 404, in _send_bytes\n",
+            "    self._send(header + buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 404, in _send_bytes\n",
+            "    self._send(header + buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 404, in _send_bytes\n",
+            "    self._send(header + buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 404, in _send_bytes\n",
+            "    self._send(header + buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 404, in _send_bytes\n",
+            "    self._send(header + buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 368, in _send\n",
+            "    n = write(self._handle, buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 368, in _send\n",
+            "    n = write(self._handle, buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 368, in _send\n",
+            "    n = write(self._handle, buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 368, in _send\n",
+            "    n = write(self._handle, buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 368, in _send\n",
+            "    n = write(self._handle, buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 368, in _send\n",
+            "    n = write(self._handle, buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 368, in _send\n",
+            "    n = write(self._handle, buf)\n",
+            "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 368, in _send\n",
+            "    n = write(self._handle, buf)\n",
+            "BrokenPipeError: [Errno 32] Broken pipe\n",
+            "BrokenPipeError: [Errno 32] Broken pipe\n",
+            "BrokenPipeError: [Errno 32] Broken pipe\n",
+            "BrokenPipeError: [Errno 32] Broken pipe\n",
+            "BrokenPipeError: [Errno 32] Broken pipe\n",
+            "BrokenPipeError: [Errno 32] Broken pipe\n",
+            "BrokenPipeError: [Errno 32] Broken pipe\n",
+            "BrokenPipeError: [Errno 32] Broken pipe\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-b8b1a8a24b22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'=> Epoch %d, lr = %0.6f <='\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprint_every\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mbst_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-5-2c00e3797ae0>\u001b[0m in \u001b[0;36mevaluate\u001b[0;34m(model, valid_loader, logger, epoch, print_every)\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    100\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \"\"\"\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     88\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     89\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     },
