使用 Colaboratory 创建

--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -478,7 +478,7 @@
         "    cnt += int(x.shape[0])\n",
         "    \n",
         "  all_loss /= float(tot)\n",
-        "  all_accuracy /= cnt\n",
+        "  all_accuracy /= float(tot)\n",
         "  logger.info('Epoch %d, train_loss=%.4f, train_accuracy=%.4f' % (epoch, all_loss, all_accuracy))\n",
         "  print(time.strftime(\"%Y-%m-%d %H:%M:%S \", time.localtime()) + 'Epoch %d, train_loss=%.4f, train_accuracy=%.4f' % (epoch, all_loss, all_accuracy))\n",
         "  return model, optimizer\n",
@@ -529,22 +529,22 @@
       "metadata": {
         "id": "DZY_IjiVO4Zt",
         "colab_type": "code",
-        "outputId": "294b187b-53b3-4302-c618-e8faa97f00a8",
+        "outputId": "6a6c1cef-ec02-4027-b92a-5d0dd9cb3218",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 323
+          "height": 305
         }
       },
       "cell_type": "code",
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Fri Dec 21 04:45:50 2018       \n",
+            "Fri Dec 21 05:02:00 2018       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 396.44                 Driver Version: 396.44                    |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -552,14 +552,13 @@
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   38C    P8    26W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
+            "| N/A   61C    P0    57W / 149W |   8552MiB / 11441MiB |      0%      Default |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
             "+-----------------------------------------------------------------------------+\n",
             "| Processes:                                                       GPU Memory |\n",
             "|  GPU       PID   Type   Process name                             Usage      |\n",
             "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
             "+-----------------------------------------------------------------------------+\n"
           ],
           "name": "stdout"
@@ -591,7 +590,8 @@
         "lr = 5e-5\n",
         "checkpoint = ''\n",
         "bz = 32\n",
-        "warmup_proportion = 0.1"
+        "warmup_proportion = 0.1\n",
+        "bst_acc = 0.0"
       ],
       "execution_count": 0,
       "outputs": []
@@ -707,7 +707,7 @@
         "outputId": "16ab4ceb-f693-4743-b993-127794b2d8cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 143
+          "height": 389
         }
       },
       "cell_type": "code",
@@ -724,7 +724,7 @@
         "  \n",
         "logger.info(\"Finish\")"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,9 +735,21 @@
             "2018-12-21 04:51:15 Epoch 0, Iter 150, loss=0.5774, acc=0.7500\n",
             "2018-12-21 04:52:55 Epoch 0, Iter 200, loss=0.7016, acc=0.6562\n",
             "2018-12-21 04:54:34 Epoch 0, Iter 250, loss=0.6229, acc=0.6875\n",
-            "2018-12-21 04:55:25 Epoch 0, train_loss=0.0000, train_accuracy=0.5526\n"
+            "2018-12-21 04:55:25 Epoch 0, train_loss=0.0000, train_accuracy=0.5526\n",
+            "2018-12-21 05:01:42 Epoch 0, valid_loss=0.4956, valid_accuracy=0.7550\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-b8b1a8a24b22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mbst_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mbst_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maccuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'model_state'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mmyModel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'epoch'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'optim_state'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'acc'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbst_acc\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'bst_acc' is not defined"
+          ]
         }
       ]
     },
@@ -753,13 +765,16 @@
     },
     {
       "metadata": {
-        "id": "_SOhg8PEIVS4",
-        "colab_type": "text"
+        "id": "1GAoZvBEI_RN",
+        "colab_type": "code",
+        "colab": {}
       },
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        ""
-      ]
+        "# TO DO"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
