--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -6,9 +6,7 @@
       "name": "bert-analysis.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [
-        "6r0ZwikpHmYO"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
